style: add some assets as decoration in hero component

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,4 @@
-<main class='flex justify-center'>
+<main class='flex justify-center animate-fade-up'>
   <div
     class='absolute top-[10%] -left-[10%] w-80 lg:w-96 lg:-top-10 lg:left-2/3 aspect-square rounded-full bg-primary blur-[120px]'
   >
@@ -11,6 +11,7 @@
     >
       Mis XV años
     </h1>
+
     <h3 class='hidden lg:inline gradient-title text-4xl font-parisienne'>
       27 Abril 2024
     </h3>
@@ -23,7 +24,18 @@
         alt='Princesa'
       />
     </picture>
-    <div>
+
+    <div class='relative'>
+      <img
+        src='./flower.webp'
+        class='absolute top-2 lg:-top-3 -left-2 lg:left-4 w-10'
+        alt='Flores colorias'
+      />
+      <img
+        src='./flower.webp'
+        class='absolute top-2 lg:top-9 -right-2 lg:-right-16 w-10'
+        alt='Flores colorias'
+      />
       <h2
         class='flex flex-col font-parisienne text-[28px] lg:text-3xl xl:text-4xl text-text-dark'
       >
