--- a/src/pages/invitacion.astro
+++ b/src/pages/invitacion.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro'
 import Hero from '@/components/Hero.astro'
 import Button from '@/components/Button.astro'
+import Countdown from '@/components/Countdown'
 
 // Icons
 import Separator from '@/components/icons/Separator.astro'
@@ -14,16 +15,16 @@ import WhatsApp from '@/components/icons/WhatsApp.astro'
   - Hover button and component ✅
   - Info card props ✅
   - Shapes and flowers ✅
-  - Counter
+  - Counter ✅
   - Add transitions and animations
   - Componitized
   - Page email? ✅
-  - View Transition API
+  - View Transition API ✅
 
 */
 ---
 
-<Layout title='Te invito a mis XV años'>
+<Layout title='Te invito a mis XV años' description=''>
   <div class='w-4/5 mx-auto pt-10'>
     <Hero />
 
@@ -154,14 +155,6 @@ import WhatsApp from '@/components/icons/WhatsApp.astro'
     class='pt-28 mt-32 relative bg-gradient-to-b from-secundary/80 via-secundary/10 to-secundary/0'
     style='clip-path: polygon(49% 8%, 100% 0, 100% 100%, 0 100%, 0 0);'
   >
-    <!-- <div class="-top-6 flex justify-center items-start text-text-dark/60">
-      <CandleHolder
-        class:list={[
-          'w-[300px]',
-        ]}
-      />
-    </div> -->
-
     <div class='w-4/5 mx-auto pt-10'>
       <!-- Dress code -->
       <section class='text-center'>
@@ -201,12 +194,17 @@ import WhatsApp from '@/components/icons/WhatsApp.astro'
     </div>
 
     <!-- counter -->
-    <footer class='mt-28'>
-      <article
-        class="py-9 relative before:absolute before:top-0 before:left-1/2 before:-translate-x-1/2 before:block before:bg-primary before:w-1/2 before:h-1 before:content-[''] after:absolute after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:block after:bg-primary after:w-1/2 after:h-1 after:content-['']"
-      >
-        <h3 class='text-center text-4xl font-parisienne'>Solo Faltan:</h3>
-      </article>
+    <footer class='mt-28 overflow-hidden min-h-[70vh] lg:min-w-[80vh] bg-footer-back bg-contain md:bg-cover bg-no-repeat bg-bottom lg:bg-top'>
+      <div class="w-4/5 mx-auto">
+        <article
+          class="py-9 relative flex flex-col justify-center items-center before:absolute before:top-0 before:left-1/2 before:-translate-x-1/2 before:block before:bg-primary before:w-1/2 before:h-1 before:content-[''] after:absolute after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:block after:bg-primary after:w-1/2 after:h-1 after:content-['']"
+        >
+          <h3 class='gradient-title text-center text-4xl font-parisienne mb-5'>
+            Solo Faltan:
+          </h3>
+          <Countdown client:idle/>
+        </article>
+      </div>
     </footer>
   </div>
 </Layout>
