--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,12 @@
 ---
+import { ViewTransitions } from 'astro:transitions';
+
 interface Props {
-  title: string
+  title: string,
+  description: string,
 }
 
-const { title } = Astro.props
+const { title, description } = Astro.props
 const { currentLocale } = Astro
 ---
 
@@ -11,15 +14,16 @@ const { currentLocale } = Astro
 <html lang={currentLocale}>
   <head>
     <meta charset='UTF-8' />
-    <meta name='description' content='Astro description' />
+    <meta name='description' content={description} />
     <meta name='viewport' content='width=device-width' />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-    <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
+    <ViewTransitions />
   </head>
-  <body>
+  <body transition:animate="none">
     <div
-      class='min__height-dynamic bg-background-body text-text-dark overflow-hidden'
+      transition:animate="fade"
+      class='min__height-dynamic min-w-80 max-w-[2440px] bg-background-body text-text-dark overflow-hidden'
     >
       <slot />
     </div>
@@ -27,7 +31,7 @@ const { currentLocale } = Astro
 </html>
 <style is:global>
   :root {
-    color-scheme: dark;
+    color-scheme: light;
   }
 
   @font-face {
