chore: add the whatsapp link and the maps link

--- a/src/components/InfoCard.astro
+++ b/src/components/InfoCard.astro
@@ -23,5 +23,5 @@ const Icon = moduleIcon.default
     </span>
     <span class='font-medium text-lg text-text-dark/60'>{location}</span>
   </p>
-  <Button href='' target='_blank' class='hover:'> Ver en maps </Button>
+  <Button href={locationMaps} target='_blank' class='hover:'> Ver en maps </Button>
 </article>
