--- a/src/pages/invitacion.astro
+++ b/src/pages/invitacion.astro
@@ -74,7 +74,7 @@ import WhatsApp from '@/components/icons/WhatsApp.astro'
           hour='5:00pm'
           place='Capilla Hacienda Bakal'
           location='Leon, Gto.'
-          locationMaps=''
+          locationMaps='https://www.google.com/maps/place/Hacienda+Bakal,+37683+León+de+los+Aldama,+Gto./@21.031889,-101.5479452,17z/data=!4m6!3m5!1s0x842b97a479518705:0x7280bd250b54bb88!8m2!3d21.031889!4d-101.5479452!16s%2Fg%2F11vbyjgmw2'
         />
         <InfoCard
           title='Recepción'
@@ -82,7 +82,7 @@ import WhatsApp from '@/components/icons/WhatsApp.astro'
           hour='7:00pm'
           place='Hacienda Bakal'
           location='Leon, Gto.'
-          locationMaps=''
+          locationMaps='https://www.google.com/maps/place/Hacienda+Bakal,+37683+León+de+los+Aldama,+Gto./@21.031889,-101.5479452,17z/data=!4m6!3m5!1s0x842b97a479518705:0x7280bd250b54bb88!8m2!3d21.031889!4d-101.5479452!16s%2Fg%2F11vbyjgmw2'
         />
       </div>
     </section>
@@ -96,7 +96,7 @@ import WhatsApp from '@/components/icons/WhatsApp.astro'
         <h3
           class='gradient-title mb-1 font-parisienne text-4xl lg:text-5xl leading-[50px] lg:leading-[70px]'
         >
-          Padres y Padrinos
+          Mis Padres y Padrinos
         </h3>
         <div class='hidden lg:inline-flex'>
           <Separator />
@@ -166,7 +166,7 @@ import WhatsApp from '@/components/icons/WhatsApp.astro'
         </span>
         <p class='md:text-lg mt-5 md:max-w-[468px] mx-auto'>
           La etiqueta es “Formal”. No hay reglas estrictas, simplemente siéntete
-          bien. ¡Esperamos verte!
+          bien. ¡Espero verte!
         </p>
       </section>
 
@@ -175,20 +175,30 @@ import WhatsApp from '@/components/icons/WhatsApp.astro'
         <h3 class='text-4xl lg:text-5xl font-parisienne mb-6'>
           Confirma tu asistencia
         </h3>
-        <div class='inline-flex items-center gap-y-3 flex-col'>
+        <div class='flex items-center justify-center gap-y-3 flex-col'>
           <span class='inline-block'>
             <WhatsApp />
           </span>
-          <Button
-            href=''
-            class='inline-block px-5 py-2.5 border border-text-dark rounded-[10px]'
-          >
-            Confirmar por WhatsApp
-          </Button>
+          <div class="mt-3 flex flex-col md:flex-row gap-3">
+            <Button
+              href='https://wa.me/524721019358?text=Hola%20quiero%20confirmar%20mi%20asistencia%20a%20tus%20XV'
+              class='inline-block  px-5 py-2.5 border border-text-dark rounded-[10px]'
+              aria-label="Chat en WhatsApp"
+            >
+              Confirmar con la festejada
+            </Button>
+            <Button
+              href='https://wa.me/524772618123?text=Hola%20quiero%20confirmar%20mi%20asistencia%20a%20los%20XV%20de%20su%20hija'
+              class='inline-block  px-5 py-2.5 border border-text-dark rounded-[10px]'
+              aria-label="Chat en WhatsApp"
+            >
+              Confirmar con mi padre
+            </Button>
+          </div>
         </div>
         <p class='md:text-lg mt-5 md:max-w-[468px] mx-auto'>
-          Agradeceríamos tu confirmación para asegurarnos de reservar tu lugar.
-          ¡Esperamos contar contigo!
+          Agradecería tu confirmación para asegurarme de reservar tu lugar.
+          ¡Espero contar contigo!
         </p>
       </section>
     </div>
