--- a/src/pages/invitacion.astro
+++ b/src/pages/invitacion.astro
@@ -1,27 +1,15 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import Hero from '@/components/Hero.astro'
-import Button from '@/components/Button.astro'
-import Countdown from '@/components/Countdown'
+import Section from '@/components/Section.astro'
+import People from '@/components/People.astro'
+import DressCode from '@/components/DressCode.astro'
+import Contact from '@/components/Contact.astro'
+import Footer from '@/components/Footer.astro'
+import InfoCard from '@/components/InfoCard.astro'
 
 // Icons
 import Separator from '@/components/icons/Separator.astro'
-import InfoCard from '@/components/InfoCard.astro'
-import King from '@/components/icons/King.astro'
-import Queen from '@/components/icons/Queen.astro'
-import DressCode from '@/components/icons/DressCode.astro'
-import WhatsApp from '@/components/icons/WhatsApp.astro'
-/*
-  - Hover button and component ✅
-  - Info card props ✅
-  - Shapes and flowers ✅
-  - Counter ✅
-  - Add transitions and animations
-  - Componitized
-  - Page email? ✅
-  - View Transition API ✅
-
-*/
 ---
 
 <Layout title='Te invito a mis XV años' description=''>
@@ -29,7 +17,7 @@ import WhatsApp from '@/components/icons/WhatsApp.astro'
     <Hero />
 
     <!-- Date section -->
-    <section class='animate-fade-up mt-20 text-center lg:hidden'>
+    <section class='mt-20 text-center lg:hidden' ata-taos-offset="300">
       <div class='mb-6 flex justify-center'>
         <Separator />
       </div>
@@ -44,29 +32,11 @@ import WhatsApp from '@/components/icons/WhatsApp.astro'
     </section>
 
     <!-- Location section -->
-    <section class='relative mt-32 text-center'>
+    <Section titleSection='Sede del festejo'>
       <div
-        class='absolute -bottom-24 -left-[20%] aspect-square w-80 rounded-full bg-primary blur-[180px]'
-      >
-      </div>
-      <div
-        class='relative mb-6 lg:grid lg:grid-cols-[25%_1fr_25%] lg:items-center'
-      >
-        <div class='mb-5 inline-flex justify-center'>
-          <Separator />
-        </div>
-        <h3
-          class='gradient-title mb-1 font-parisienne text-4xl leading-[50px] lg:leading-[70px] lg:text-5xl'
-        >
-          Sede del festejo
-        </h3>
-        <div class='hidden lg:inline-flex'>
-          <Separator />
-        </div>
-      </div>
-
-      <div
-        class='realtive flex flex-col gap-x-8 justify-center gap-y-12 md:flex-row'
+        class='realtive flex flex-col gap-x-8 justify-center gap-y-12 md:flex-row delay-[300ms] duration-[600ms] taos:translate-x-[200px] taos:opacity-0'
+        data-taos-offset="200"
+        slot="content"
       >
         <InfoCard
           title='Ceremonia Religiosa'
@@ -85,69 +55,12 @@ import WhatsApp from '@/components/icons/WhatsApp.astro'
           locationMaps='https://www.google.com/maps/place/Hacienda+Bakal,+37683+León+de+los+Aldama,+Gto./@21.031889,-101.5479452,17z/data=!4m6!3m5!1s0x842b97a479518705:0x7280bd250b54bb88!8m2!3d21.031889!4d-101.5479452!16s%2Fg%2F11vbyjgmw2'
         />
       </div>
-    </section>
+    </Section>
 
     <!-- People section -->
-    <section class='mt-32 text-center'>
-      <div class='mb-6 lg:grid lg:grid-cols-[25%_1fr_25%] lg:items-center'>
-        <div class='mb-5 inline-flex justify-center'>
-          <Separator />
-        </div>
-        <h3
-          class='gradient-title mb-1 font-parisienne text-4xl lg:text-5xl leading-[50px] lg:leading-[70px]'
-        >
-          Mis Padres y Padrinos
-        </h3>
-        <div class='hidden lg:inline-flex'>
-          <Separator />
-        </div>
-      </div>
-
-      <section
-        class='grid grid-cols-2 gap-x-2 gap-y-8 md:gap-y-10 text-text-dark md:max-w-[468px] lg:max-[678px] md:mx-auto'
-      >
-        <article class='text-sm sm:text-base lg:text-lg font-medium'>
-          <p>
-            Víctor Manuel
-            <br />
-            Hernández Carmona
-          </p>
-          <span class='inline-block'>
-            <King />
-          </span>
-        </article>
-        <article class='text-sm sm:text-base lg:text-lg font-medium'>
-          <p>
-            Myriam Jeanett
-            <br />
-            Ramírez Guzmán
-          </p>
-          <span class='inline-block'>
-            <Queen />
-          </span>
-        </article>
-        <article class='text-sm sm:text-base lg:text-lg font-medium'>
-          <p>
-            Marco Antonio
-            <br />
-            Moreno de la Cruz
-          </p>
-          <span class='inline-block'>
-            <King />
-          </span>
-        </article>
-        <article class='text-sm sm:text-base lg:text-lg font-medium'>
-          <p>
-            Karen Anaís
-            <br />
-            Hernández Miranda
-          </p>
-          <span class='inline-block'>
-            <Queen />
-          </span>
-        </article>
-      </section>
-    </section>
+    <Section titleSection='Mis Padres y Padrinos'>
+      <People slot='content'/>
+    </Section>
   </div>
 
   <!-- other info section container -->
@@ -157,64 +70,11 @@ import WhatsApp from '@/components/icons/WhatsApp.astro'
   >
     <div class='w-4/5 mx-auto pt-10'>
       <!-- Dress code -->
-      <section class='text-center'>
-        <h3 class='mb-6 text-4xl lg:text-5xl font-parisienne'>
-          Código de Vestimenta
-        </h3>
-        <span class='inline-block'>
-          <DressCode />
-        </span>
-        <p class='md:text-lg mt-5 md:max-w-[468px] mx-auto'>
-          La etiqueta es “Formal”. No hay reglas estrictas, simplemente siéntete
-          bien. ¡Espero verte!
-        </p>
-      </section>
-
+      <DressCode/>
       <!-- Confirm section -->
-      <section class='mt-32 text-center'>
-        <h3 class='text-4xl lg:text-5xl font-parisienne mb-6'>
-          Confirma tu asistencia
-        </h3>
-        <div class='flex items-center justify-center gap-y-3 flex-col'>
-          <span class='inline-block'>
-            <WhatsApp />
-          </span>
-          <div class="mt-3 flex flex-col md:flex-row gap-3">
-            <Button
-              href='https://wa.me/524721019358?text=Hola%20quiero%20confirmar%20mi%20asistencia%20a%20tus%20XV'
-              class='inline-block  px-5 py-2.5 border border-text-dark rounded-[10px]'
-              aria-label="Chat en WhatsApp"
-            >
-              Confirmar con la festejada
-            </Button>
-            <Button
-              href='https://wa.me/524772618123?text=Hola%20quiero%20confirmar%20mi%20asistencia%20a%20los%20XV%20de%20su%20hija'
-              class='inline-block  px-5 py-2.5 border border-text-dark rounded-[10px]'
-              aria-label="Chat en WhatsApp"
-            >
-              Confirmar con mi padre
-            </Button>
-          </div>
-        </div>
-        <p class='md:text-lg mt-5 md:max-w-[468px] mx-auto'>
-          Agradecería tu confirmación para asegurarme de reservar tu lugar.
-          ¡Espero contar contigo!
-        </p>
-      </section>
+      <Contact/>
     </div>
-
-    <!-- counter -->
-    <footer class='mt-28 overflow-hidden min-h-[70vh] lg:min-w-[80vh] bg-footer-back bg-contain md:bg-cover bg-no-repeat bg-bottom lg:bg-top'>
-      <div class="w-4/5 mx-auto">
-        <article
-          class="py-9 relative flex flex-col justify-center items-center before:absolute before:top-0 before:left-1/2 before:-translate-x-1/2 before:block before:bg-primary before:w-1/2 before:h-1 before:content-[''] after:absolute after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:block after:bg-primary after:w-1/2 after:h-1 after:content-['']"
-        >
-          <h3 class='gradient-title text-center text-4xl font-parisienne mb-5'>
-            Solo Faltan:
-          </h3>
-          <Countdown client:idle/>
-        </article>
-      </div>
-    </footer>
+    <!-- footer -->
+    <Footer/>
   </div>
 </Layout>
