chore: add description page for index and invitation page

--- a/src/components/InfoCard.astro
+++ b/src/components/InfoCard.astro
@@ -9,7 +9,7 @@ const Icon = moduleIcon.default
 ---
 
 <article
-  class='card md:min-w-[340px] flex flex-col items-center p-6 border border-text-dark rounded-[10px] bg-gradient-to-b from-primary/60 to-secundary/10'
+  class='md:min-w-[340px] flex flex-col items-center p-6 border border-text-dark rounded-[10px] bg-gradient-to-b from-primary/60 to-secundary/10'
 >
   <h4 class='text-[32px] mb-4 font-parisienne'>{title}</h4>
   <div>
