--- a/src/pages/invitacion.astro
+++ b/src/pages/invitacion.astro
@@ -12,7 +12,10 @@ import InfoCard from '@/components/InfoCard.astro'
 import Separator from '@/components/icons/Separator.astro'
 ---
 
-<Layout title='Te invito a mis XV años' description=''>
+<Layout
+  title='Te invito a mis XV años'
+  description='Invitación digital para la celabración de XV años de Victoria Dairelyn
+Hernández Ramírez'>
   <div class='w-4/5 mx-auto pt-10'>
     <Hero />
 
