--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,10 @@
 import Layout from '../layouts/Layout.astro'
 ---
 
-<Layout title='Mis XV años' description=''>
+<Layout
+  title='Mis XV años'
+  description='Invitación digital para la celabración de XV años de Victoria Dairelyn
+Hernández Ramírez'>
   <main class='min__height-dynamic overflow-hidden relative bg-background-body grid place-content-center'>
     <div class='mail mb-8'>
       <div class='envelope bg-[#FFA5A5] w-full h-20 z-[1]'>
