--- a/src/components/InfoCard.astro
+++ b/src/components/InfoCard.astro
@@ -22,5 +22,7 @@ const Icon = moduleIcon.default
     </span>
     <span class='font-medium text-lg text-text-dark/60'>{location}</span>
   </p>
-  <Button href={locationMaps} target='_blank' class='hover:'> Ver en maps </Button>
+  <Button href={locationMaps} target='_blank' class='hover:'>
+    Ver en maps
+  </Button>
 </article>
