--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 interface Props {
-  title: string,
-  description: string,
+  title: string
+  description: string
 }
 
 const { title, description } = Astro.props
@@ -16,15 +16,14 @@ const { currentLocale } = Astro
     <meta name='viewport' content='width=device-width' />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <title>{title}</title>
-  <body>
+  </head><body>
     <div
       class='min__height-dynamic min-w-80 max-w-[2440px] bg-background-body text-text-dark overflow-hidden'
     >
       <slot />
     </div>
 
-
-    <script src="https://unpkg.com/taos@1.0.5/dist/taos.js"></script>
+    <script src='https://unpkg.com/taos@1.0.5/dist/taos.js'></script>
   </body>
 </html>
 <style is:global>
