--- a/src/pages/invitacion.astro
+++ b/src/pages/invitacion.astro
@@ -14,13 +14,13 @@ import Separator from '@/components/icons/Separator.astro'
 
 <Layout
   title='Te invito a mis XV años'
-  description='Invitación digital para la celabración de XV años de Victoria Dairelyn
-Hernández Ramírez'>
+  description='Invitación digital para la celabración de XV años de Victoria Dairelyn Hernández Ramírez'
+>
   <div class='w-4/5 mx-auto pt-10'>
     <Hero />
 
     <!-- Date section -->
-    <section class='mt-20 text-center lg:hidden' ata-taos-offset="300">
+    <section class='mt-20 text-center lg:hidden' ata-taos-offset='300'>
       <div class='mb-6 flex justify-center'>
         <Separator />
       </div>
@@ -38,8 +38,8 @@ Hernández Ramírez'>
     <Section titleSection='Sede del festejo'>
       <div
         class='realtive flex flex-col gap-x-8 justify-center gap-y-12 md:flex-row delay-[300ms] duration-[600ms] taos:translate-x-[200px] taos:opacity-0'
-        data-taos-offset="200"
-        slot="content"
+        data-taos-offset='200'
+        slot='content'
       >
         <InfoCard
           title='Ceremonia Religiosa'
@@ -62,7 +62,7 @@ Hernández Ramírez'>
 
     <!-- People section -->
     <Section titleSection='Mis Padres y Padrinos'>
-      <People slot='content'/>
+      <People slot='content' />
     </Section>
   </div>
 
@@ -73,11 +73,11 @@ Hernández Ramírez'>
   >
     <div class='w-4/5 mx-auto pt-10'>
       <!-- Dress code -->
-      <DressCode/>
+      <DressCode />
       <!-- Confirm section -->
-      <Contact/>
+      <Contact />
     </div>
     <!-- footer -->
-    <Footer/>
+    <Footer />
   </div>
 </Layout>
