--- a/src/components/DressCode.astro
+++ b/src/components/DressCode.astro
@@ -1,8 +1,11 @@
 ---
-import Clothes from "./icons/Clothes.astro";
+import Clothes from './icons/Clothes.astro'
 ---
 
-<section class='text-center delay-[100ms] duration-[300ms] taos:translate-y-[-200px] taos:opacity-0' data-taos-offset="200">
+<section
+  class='text-center delay-[100ms] duration-[300ms] taos:translate-y-[-200px] taos:opacity-0'
+  data-taos-offset='200'
+>
   <h3 class='mb-6 text-4xl lg:text-5xl font-parisienne'>
     Código de Vestimenta
   </h3>
@@ -10,7 +13,7 @@ import Clothes from "./icons/Clothes.astro";
     <Clothes />
   </span>
   <p class='md:text-lg mt-5 md:max-w-[468px] mx-auto'>
-    La etiqueta es “Formal”. No hay reglas estrictas, simplemente siéntete
-    bien. ¡Espero verte!
+    La etiqueta es “Formal”. No hay reglas estrictas, simplemente siéntete bien.
+    ¡Espero verte!
   </p>
 </section>
