style: change the favicon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,7 @@ import Layout from '../layouts/Layout.astro'
 
 <Layout
   title='Mis XV años'
-  description='Invitación digital para la celabración de XV años de Victoria Dairelyn
-Hernández Ramírez'
+  description='Invitación digital para la celabración de XV años de Victoria Dairelyn Hernández Ramírez'
 >
   <main
     class='min__height-dynamic overflow-hidden relative bg-background-body grid place-content-center'
