optimize: the lpc and some changs in parents section

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,6 +22,9 @@
         class='max-w-full rounded-t-full object-cover'
         src='./princess.webp'
         alt='Princesa'
+        width="270"
+        height="350"
+        fetchpriority="high"
       />
     </picture>
 
