--- a/src/components/People.astro
+++ b/src/components/People.astro
@@ -6,6 +6,12 @@ import Queen from '@/components/icons/Queen.astro'
 <section
   class='grid grid-cols-2 gap-x-2 gap-y-8 md:gap-y-10 text-text-dark md:max-w-[468px] lg:max-[678px] md:mx-auto'
 >
+  <h3
+    class='gradient-title col-span-2 mb-1 font-parisienne text-4xl leading-[50px] lg:leading-[70px] lg:text-5xl delay-[100ms] duration-[300ms] taos:scale-[0.6] taos:opacity-0'
+    data-taos-offset='100'
+  >
+    Mis Padres
+  </h3>
   <article
     class='text-sm sm:text-base lg:text-lg font-medium delay-[200ms] duration-[400ms] taos:[transform:translate3d(200px,200px,0)] taos:opacity-0'
     data-taos-offset='200'
@@ -32,6 +38,12 @@ import Queen from '@/components/icons/Queen.astro'
       <Queen />
     </span>
   </article>
+  <h3
+    class='gradient-title mt-6 col-span-2 mb-1 font-parisienne text-4xl leading-[50px] lg:leading-[70px] lg:text-5xl delay-[100ms] duration-[300ms] taos:scale-[0.6] taos:opacity-0'
+    data-taos-offset='100'
+  >
+    Mis Padrinos
+  </h3>
   <article
     class='text-sm sm:text-base lg:text-lg font-medium delay-[200ms] duration-[400ms] taos:[transform:translate3d(200px,200px,0)] taos:opacity-0'
     data-taos-offset='200'
