--- a/src/pages/invitacion.astro
+++ b/src/pages/invitacion.astro
@@ -82,7 +82,7 @@ import Separator from '@/components/icons/Separator.astro'
     </Section>
 
     <!-- Parents section -->
-    <Section titleSection=''>
+    <Section>
       <div
         slot="decoration"
         class='absolute -bottom-10 right-0 aspect-square w-80 rounded-full bg-primary blur-[180px]'
