--- a/src/components/People.astro
+++ b/src/components/People.astro
@@ -10,7 +10,7 @@ import Queen from '@/components/icons/Queen.astro'
     class='gradient-title col-span-2 mb-1 font-parisienne text-4xl leading-[50px] lg:leading-[70px] lg:text-5xl delay-[100ms] duration-[300ms] taos:scale-[0.6] taos:opacity-0'
     data-taos-offset='100'
   >
-    Mis Padres
+    Mis Papás
   </h3>
   <article
     class='text-sm sm:text-base lg:text-lg font-medium delay-[200ms] duration-[400ms] taos:[transform:translate3d(200px,200px,0)] taos:opacity-0'
